Changed header of report

--- a/report/sections/header.tex
+++ b/report/sections/header.tex
@@ -5,7 +5,7 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Relatório 2 - ELE-32\\ Códigos de Bloco Cíclicos e BCH}
+\title{Relatório 3 e 4 - ELE-32\\ Códigos Convolucionais e Comparação Justa}
 
 
 % author names and affiliations
@@ -17,8 +17,8 @@ Instituto Tecnológico de Aeronáutica\\
 São José dos Campos, São Paulo\\
 Email: aloysiogl@gmail.com}
 \and
-\IEEEauthorblockN{Vitor Pimenta dos Reis Arruda}
+\IEEEauthorblockN{Heládio Sampaio Lopes}
 \IEEEauthorblockA{Departamento de\\Engenharia da Computação\\
 Instituto Tecnológico de Aeronáutica\\
 São José dos Campos, São Paulo\\
-Email: vitor\_pimenta97@hotmail.com}}
+Email: heladio.lopes@gmail.com}}
