--- a/report/sections/abstract.tex
+++ b/report/sections/abstract.tex
@@ -2,12 +2,7 @@
 % in the abstract
 \begin{abstract}
 
-Este relatório avalia o desempenho, sobre um canal binário simétrico, de códigos
-cíclicos com bloco pequeno e de códigos BCH primitivos.
-
-Para tanto, implementaram-se um canal BSC e codificadores/decodificadores para os códigos
-mencionados. A taxa de erro de bit de informação foi avaliada estatisticamente para 
-eles, submetendo-os a várias palavras aleatórias para estimar seus desempenhos.
+Colocar o resumo
 
 \end{abstract}
 
