Added new report section files

--- a/report/report.tex
+++ b/report/report.tex
@@ -24,7 +24,7 @@
 %	é linear no tamanho do bloco
 %
 
-\input{sections/intro_ciclicos.tex}
+\input{sections/intro_conv.tex}
 
 \input{sections/bch_teoria.tex}
 
