--- a/report/sections/abstract.tex
+++ b/report/sections/abstract.tex
@@ -2,7 +2,7 @@
 % in the abstract
 \begin{abstract}
 
-Colocar o resumo
+A prática aqui relatada consiste em um estudo das técnicas de transmissão de mensagens através de códigos convolucionais e da comparação justa entre os códigos de Hamming, cíclicos e convolucionais. Para o estudo do código convolucional, implementado em \textit{Python 3.5.2}, foram realizadas simulações do processo de codificação para diferentes tamanhos de código, transmissão através de canal para diferentes probabilidades de erro e decodificação de bits de informação através do algoritmo de Viterbi e suas variantes.
 
 \end{abstract}
 
