--- a/report/sections/header.tex
+++ b/report/sections/header.tex
@@ -5,7 +5,7 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Relatório 3 e 4 - ELE-32\\ Códigos Convolucionais e Comparação Justa}
+\title{\bf Laboratórios 3 e 4 - ELE-32\\ {\huge Códigos Convolucionais e Comparação Justa}}
 
 
 % author names and affiliations
