--- a/report/sections/bibliography.tex
+++ b/report/sections/bibliography.tex
@@ -1,8 +1,8 @@
 \begin{thebibliography}{1}
 
-\bibitem{ref:algoritmo-berlekamp}
-Berlekamp, Elwyn R. \emph{Algebraic Coding Theory}. Edição revisada. Singapura: WSPC, 2015. 
-\bibitem{ref:roteiro}
-Sharma, Manish \emph{Aula2 - Códigos Cíclicos}. ELE32-Introdução a Comunicações. 2018. 
+\bibitem{ref:roteiro_lab3}
+Sharma, Manish \emph{Aula 3 - Código Convolucional}. ELE32 - Introdução a Comunicações. 2018. 
+\bibitem{ref:roteiro_lab4}
+Sharma, Manish \emph{Aula 4 - Uma comparação justa}. ELE32 - Introdução a Comunicações. 2018. 
 
 \end{thebibliography}
