Update on report main file

--- a/report/report.tex
+++ b/report/report.tex
@@ -26,13 +26,13 @@
 
 \input{sections/intro_conv.tex}
 
-\input{sections/bch_teoria.tex}
+\input{sections/intro_comp.tex}
 
-\input{sections/algoritmo_codigos_ciclicos.tex}
+\input{sections/algoritmo_codigos_convolucionais.tex}
 
-\input{sections/resultados.tex}
+\input{sections/resultados_conv.tex}
 
-\input{sections/conclusao.tex}
+\input{sections/conclusao_conv.tex}
 
 \input{sections/bibliography.tex}
 
