Added to results in report

--- a/report/sections/resultados_conv.tex
+++ b/report/sections/resultados_conv.tex
@@ -1,4 +1,8 @@
 \section{Resultados}
+O codificador convolucional foi capaz de realizar, em média, a codificação de 1 bit de informação a cada $5.4\mu s$. Para o decodificador, foi possível, em média, realizar decodificação em $84\mu s$, vale ressaltar que o tempo de decodificação varia com o polinômio, no entanto o tempo de codificação não varia com o polinômio e o valor mostrado acima foi um valor médio.
+
+O código foi feito em Python, uma linguagem interpretada, logo, não há arquivo executável. Somando o tamanho de todos os arquivos desenvolvidos durante essa disciplina de laboratório, totaliza-se 100kB. Se forem levados em conta os arquivos das dependências (principalmente numpy e scipy) tem-se um total de 155.5MB. Dessa forma, para executar o projeto desenvolvido como um todo deve-se ter cerca de 160MB disponíveis em disco.
+
 %
 %\subsection{Códigos cíclicos não-BCH}
 %
