Adicionada figura com comparação dos códigos desenvolvidos pela equipe

--- a/report/sections/resultados_conv.tex
+++ b/report/sections/resultados_conv.tex
@@ -14,6 +14,14 @@ A Figura \ref{fig:cyclic} mostra uma comparação entre todos os códigos cícli
 	\caption{\label{fig:cyclic}Comparação da eficácia dos códigos cíclicos para 96768 bits de informação enviados.}
 \end{figure}
 
+A Figura \ref{fig:proprios} mostra uma comparação entre todos os códigos desenvolvidos pela equipe na primeira prática.
+
+\begin{figure}[ht]
+	\centering
+	\captionsetup{justification=centering}
+	\includegraphics[scale=0.45]{floats/proprios.png}
+	\caption{\label{fig:proprios}Comparação da eficácia dos códigos desenvolvidos pela equipe para 96768 bits de informação enviados.}
+\end{figure}
 
 %
 %\subsection{Códigos cíclicos não-BCH}
