Adicionada primeira comparação convolucional

--- a/report/sections/resultados_conv.tex
+++ b/report/sections/resultados_conv.tex
@@ -23,6 +23,16 @@ A Figura \ref{fig:proprios} mostra uma comparação entre todos os códigos dese
 	\caption{\label{fig:proprios}Comparação da eficácia dos códigos desenvolvidos pela equipe para 96768 bits de informação enviados.}
 \end{figure}
 
+As Figuras \ref{fig:convolucionais1}, \ref{fig:convolucionais2}, e \ref{fig:convolucionais3} mostram uma comparação entre todos os códigos convolucionais com as métricas de Hamming, Exata e distância Euclidiana respectivamente. A taxa para todos é $\frac{1}{3}$ e os polinômios utilizados são os do roteiro numerados na ordem em que aparecem no roteiro.
+
+\begin{figure}[ht]
+	\centering
+	\captionsetup{justification=centering}
+	\includegraphics[scale=0.45]{floats/conv1.png}
+	\caption{\label{fig:convolucionais1}Comparação da eficácia dos códigos convolucionais com distância de Hamming para 96768 bits de informação enviados.}
+\end{figure}
+
+
 %
 %\subsection{Códigos cíclicos não-BCH}
 %
