segunda comapracao convolucional

--- a/report/sections/resultados_conv.tex
+++ b/report/sections/resultados_conv.tex
@@ -28,8 +28,8 @@ As Figuras \ref{fig:convolucionais1}, \ref{fig:convolucionais2}, e \ref{fig:conv
 \begin{figure}[ht]
 	\centering
 	\captionsetup{justification=centering}
-	\includegraphics[scale=0.45]{floats/conv1.png}
-	\caption{\label{fig:convolucionais1}Comparação da eficácia dos códigos convolucionais com distância de Hamming para 96768 bits de informação enviados.}
+	\includegraphics[scale=0.45]{floats/conv2.png}
+	\caption{\label{fig:convolucionais2}Comparação da eficácia dos códigos convolucionais com distância 'Exata' para 96768 bits de informação enviados.}
 \end{figure}
 
 
